--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Pliant:ital,wght@0,100..900;1,100..900&display=swap");
 
+*[disabled] {
+  opacity: .5;
+  cursor: not-allowed;
+}
+
 :root {
   --color-border-1: #303748;
 }
