--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,12 +1,14 @@
 .home {
   display: flex;
   flex-direction: column;
-  background: linear-gradient(180deg, #424e5e 0%, #363d45 50%, #22262f 100%);
+    background-color: #101934;
+
   min-height: 100vh;
   justify-content: center;
   align-items: center;
   gap: 55px;
   overflow-x: hidden;
+  padding-bottom: 75px;
 }
 
 .home h1 {
